resolved horizontal scrolling mobile article view issue

--- a/frontend/styles/application.sass
+++ b/frontend/styles/application.sass
@@ -681,9 +681,6 @@ a.export-history:hover {
     }
   }
 
-  .footer {
-  }
-
   ul.tabs {
     display: block;
     width: 100%;
@@ -740,7 +737,9 @@ a.export-history:hover {
   .content-right {
     width: 100%;
     display: none;
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
   }
 
   .content-right.active {
